News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/News_Xtend_Product_Ref__c.object-meta.xml
<CustomObject>
    <description>Temporary reference object for design modelling.</description>
    <label>News Xtend Product Ref</label>
    <nameField>
        <label>NewsXtendProductRef Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News Xtend Product Ref</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>