News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <label>Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>