News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price__c</fullName>
    <description>Price charged to the customer</description>
    <label>Basic Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>