News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/BriefingFormProducts__c.field-meta.xml
<CustomField>
    <fullName>BriefingFormProducts__c</fullName>
    <label>Briefing Form Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Tracking</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>RTB_Campaign Info</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>