News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Cost_Model__c.field-meta.xml
<CustomField>
    <fullName>Cost_Model__c</fullName>
    <label>Cost Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>