News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Cost_Of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Goods__c</fullName>
    <description>Cost of goods to News Corp</description>
    <label>Cost Of Goods</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>