News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/HTML_IS__c.field-meta.xml
<CustomField>
    <fullName>HTML_IS__c</fullName>
    <label>HTML IS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>