News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Minimum_Order__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order__c</fullName>
    <label>Minimum Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>