News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Product_Groups_For_IO__c.field-meta.xml
<CustomField>
    <fullName>Product_Groups_For_IO__c</fullName>
    <label>Product Groups For IO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>