News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Product_Node__c.field-meta.xml
<CustomField>
    <fullName>Product_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Node</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>News Xtend Product Ref</relationshipLabel>
    <relationshipName>News_Xtend_Product_Ref</relationshipName>
    <type>Lookup</type>
</CustomField>