News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/fields/Quantity_By__c.field-meta.xml
<CustomField>
    <fullName>Quantity_By__c</fullName>
    <inlineHelpText>Quantity is multiplied with this number - For impressions</inlineHelpText>
    <label>Quantity By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>