News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/recordTypes/Network.recordType-meta.xml
<RecordType>
    <fullName>Network</fullName>
    <active>true</active>
    <description>Record Type for Group of Networks</description>
    <label>Network</label>
</RecordType>