News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Record Type for Products</description>
    <label>Product</label>
</RecordType>