News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/recordTypes/Product_Line.recordType-meta.xml
<RecordType>
    <fullName>Product_Line</fullName>
    <active>true</active>
    <description>Record Type for Group of Product Lines</description>
    <label>Product Line</label>
</RecordType>