News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/recordTypes/Product_Type.recordType-meta.xml
<RecordType>
    <fullName>Product_Type</fullName>
    <active>true</active>
    <description>Record Type for Group of Product Types</description>
    <label>Product Type</label>
</RecordType>