News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/recordTypes/Provider.recordType-meta.xml
<RecordType>
    <fullName>Provider</fullName>
    <active>true</active>
    <description>Record Type for Providers</description>
    <label>Provider</label>
</RecordType>