News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/listViews/Network.listView-meta.xml
<ListView>
    <fullName>Network</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Network</value>
    </filters>
    <label>Network</label>
</ListView>