News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/listViews/Product.listView-meta.xml
<ListView>
    <fullName>Product</fullName>
    <columns>NAME</columns>
    <columns>Product_Node__c</columns>
    <columns>Cost_Of_Goods__c</columns>
    <columns>Basic_Price__c</columns>
    <columns>Site_Section__c</columns>
    <columns>Site_Section_Group__c</columns>
    <columns>Network__c</columns>
    <columns>Product_Groups_For_IO__c</columns>
    <columns>Cost_Model__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>BriefingFormProducts__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>News_Xtend_Product_Ref__c.Product</value>
    </filters>
    <label>Product</label>
</ListView>