News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/listViews/Product_Line.listView-meta.xml
<ListView>
    <fullName>Product_Line</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Product Line</value>
    </filters>
    <label>Product Line</label>
</ListView>