News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/listViews/Product_Type.listView-meta.xml
<ListView>
    <fullName>Product_Type</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Product Type</value>
    </filters>
    <label>Product Type</label>
</ListView>