News UAT/force-app/main/default/objects/News_Xtend_Product_Ref__c/listViews/Providers.listView-meta.xml
<ListView>
    <fullName>Providers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Provider</value>
    </filters>
    <label>Providers</label>
</ListView>